--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "dom": "^0.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
